--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
+   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
